# Xray-VPS-Manager

./: .gitignore  LICENSE  README.md  bootstrap.sh  caddy-menu  install-caddy-download-proxy.sh  install.sh  pyproject.toml  xray-activity  xray-backup  xray-client  xray-manager-update  xray-menu  xray-set-bypass  xray-set-cascade  xray-telegram  xray-test  xray-traffic-sync  xray-update  xray-vps-manager  xray-warp
docs/: activity.md  backups-and-data.md  cascade-and-warp.md  clients.md  connections.md  database-schema.md  index.md  installation.md  menu.md  project-structure.md  security.md  telegram.md  timezone-and-traffic.md  updates.md
tests/: fixture_json_state.py  test_activity_blocklist.py  test_activity_bypass.py  test_activity_client_reports.py  test_activity_raw_logs.py  test_activity_repository_read.py  test_activity_repository_write.py  test_activity_status.py  test_activity_sync.py  test_backup_sqlite.py  test_bootstrap_script.py  test_bypass_management.py  test_caddy_command.py  test_caddy_config.py  test_caddy_download_proxy_scripts.py  test_cascade_management.py  test_cli_smoke.py  test_client_access.py  test_client_command_read.py  test_client_limits.py  test_client_routes.py  test_client_runtime.py  test_clients_repository_read.py  test_clients_repository_write.py  test_core_process.py  test_core_server_env.py  test_core_terminal.py  test_core_time.py  test_db_database.py  test_db_json_import.py  test_db_repositories.py  test_db_schema.py  test_install_sqlite_first.py  test_manager_update.py  test_menu_activity_actions.py  test_menu_caddy_actions.py  (+31 more)
(+128 files in other folders)
