[project]
name = "xray-vps-manager"
version = "2.0.0"
description = "VPS manager for Xray VLESS Reality, clients, traffic, Telegram notifications, backups, and diagnostics."
requires-python = ">=3.9"
readme = "README.md"

[project.scripts]
xray-vps-manager = "xray_vps_manager.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
